--- a/app/src/main/res/layout/dialog_add_drawing_permission.xml
+++ b/app/src/main/res/layout/dialog_add_drawing_permission.xml
@@ -59,10 +59,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/grantBtn"
+            android:id="@+id/allowBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Grant"
+            android:text="Allow"
             app:layout_constraintEnd_toEndOf="@+id/textView10"
             app:layout_constraintStart_toStartOf="@+id/textView10"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
