--- a/app/src/main/res/layout/azan_times_fragment.xml
+++ b/app/src/main/res/layout/azan_times_fragment.xml
@@ -13,7 +13,7 @@
             android:id="@+id/dateTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1-1-2019"
+            android:text=""
             android:textColor="#313131"
             android:textSize="50sp"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
                         android:id="@+id/textView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Alsalah"
+                        android:text="@string/alsalah"
                         android:textColor="#fff"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
                         android:id="@+id/textView16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Times"
+                        android:text="@string/times"
                         android:textColor="#fff"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -119,7 +119,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Fagr"
+                        android:text="@string/azan_fagr"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView12"
@@ -147,7 +147,7 @@
                         android:id="@+id/fagrTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -191,7 +191,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Zohr"
+                        android:text="@string/azan_zuhr"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView13"
@@ -219,7 +219,7 @@
                         android:id="@+id/zohrTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -263,7 +263,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Asr"
+                        android:text="@string/azan_asr"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView14"
@@ -291,7 +291,7 @@
                         android:id="@+id/asrTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -335,7 +335,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Eshaa"
+                        android:text="@string/azan_eshaa"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView15"
@@ -363,7 +363,7 @@
                         android:id="@+id/eshaaTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -407,7 +407,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Shoroq"
+                        android:text="@string/al_shoroq"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView16"
@@ -425,7 +425,7 @@
                         android:id="@+id/shoroqTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="06:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -479,7 +479,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:text="Al Maghreb"
+                        android:text="@string/azan_maghreb"
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView17"
@@ -507,7 +507,7 @@
                         android:id="@+id/maghrebTimeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="03:00"
+                        android:text=""
                         android:textColor="#313131"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
