--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
-                    android:text="Setting"
+                    android:text="@string/setting"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -92,7 +92,7 @@
                             android:id="@+id/textView9"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Your Current Location is"
+                            android:text="@string/your_current_location_is"
                             android:textColor="@color/colorAccent"
                             android:textSize="12sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="Cairo"
+                            android:text="@string/cairo"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="14sp"
@@ -191,7 +191,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Your selected Azan Times Calculation Type is :"
+                            android:text="@string/your_selected_azan_times_calculation_type_is"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="14sp"
@@ -299,7 +299,7 @@
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
                             android:background="@drawable/setting_grediant"
-                            android:text="Edit"
+                            android:text="@string/edit"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/calculationTypeTv" />
@@ -351,7 +351,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="Your selected Azan Juristic Method is :"
+                            android:text="الطريقة الفقهية المختارة :"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="14sp"
@@ -373,7 +373,7 @@
                             android:layout_height="30dp"
                             android:layout_marginTop="8dp"
                             android:background="@drawable/setting_grediant"
-                            android:text="Edit"
+                            android:text="@string/edit"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/juristicMethodTv" />
@@ -397,7 +397,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="8dp"
                                 android:background="@drawable/setting_grediant"
-                                android:text="Shafii"
+                                android:text="@string/shafii"
                                 android:textColor="#000"
                                 android:textSize="10sp" />
 
@@ -409,7 +409,7 @@
                                 android:layout_marginTop="8dp"
                                 android:layout_marginEnd="8dp"
                                 android:background="@drawable/setting_grediant"
-                                android:text="Hanafi"
+                                android:text="@string/hanafi"
                                 android:textColor="#000"
                                 android:textSize="10sp" />
 
