--- a/app/src/main/res/layout/dialog_add_drawing_permission.xml
+++ b/app/src/main/res/layout/dialog_add_drawing_permission.xml
@@ -49,7 +49,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="64dp"
-            android:text="You must permit drawing over other apps"
+            android:text="@string/you_must_permit_drawing_over_other_apps"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -62,7 +62,7 @@
             android:id="@+id/allowBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Allow"
+            android:text="@string/allow"
             app:layout_constraintEnd_toEndOf="@+id/textView10"
             app:layout_constraintStart_toStartOf="@+id/textView10"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
