--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
-                android:text="close" />
+                android:text="@string/close" />
 
             <!--Previous button-->
 
