--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -352,7 +352,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="الطريقة الفقهية المختارة :"
+                            android:text="@string/your_juristic_method"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="14sp"
