--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -433,6 +433,21 @@
                         android:layout_height="500dp"
                         android:background="@drawable/setting_content_grediant">
 
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="453dp"
+                            android:text="Time of doaa before the azan"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="14sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/reminderTv" />
+
                         <ImageView
                             android:id="@+id/imageView28"
                             android:layout_width="wrap_content"
@@ -466,10 +481,11 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
                             android:layout_marginEnd="8dp"
+                            android:entries="@array/reminder_before_times"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.502"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/reminderTv" />
+                            app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
